Tue Jan  8 13:51:08 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/site.xsl doc/*.html: added a DocBook section docbook.html

Tue Jan  8 12:51:15 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/*.html: updated gdome2 homepage

Sat Jan  5 19:32:17 CET 2002 Daniel Veillard <daniel@veillard.com>

	* win32/dsp: Windows/MSVC project files update from Igor Zlatkovic

Fri Jan  4 22:13:40 MST 2002 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.xml, xsltproc.1 - updating man page to reflect
	increased number of parameteres, changed license, cleaned up some
	places where it looked junky because of stylesheet issues

Fri Jan  4 15:50:25 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: increased the max number of parameters

Thu Dec 20 14:54:27 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt.pc.in configure.in: added pkg-config file from Rodrigo Moya

Thu Dec 20 14:49:39 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: applied albert portability patch
	* libxslt/libxslt.h libxslt/xslt.h libxslt/xsltconfig.h.in
	 libxslt/xsltutils.c libxslt/xsltwin32config.h.in win32/dsp/libxslt.def:
	 applied Igor patch for Windows

Tue Dec 11 15:27:15 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: fixed a problem with the debuuger interface.

Fri Dec  7 15:48:48 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.9
	* doc/*: updated and rebuild the doc

Thu Dec  6 14:57:56 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in libexslt/Makefile.am: trying to fix the problem
	  related to prelinking and libtools crazyness

Wed Dec  5 18:49:53 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c libxslt/variables.c: applied Keith Isdale
	  patch for the debugger glue.

Wed Dec  5 18:43:45 CET 2001 Daniel Veillard <daniel@veillard.com>

	* breakpoint/Makefile.am breakpoint/deprecated.c: replaced
	  the whole module with just the entry points.
